# nina-fw

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  Makefile  README.md  combine.py  sdkconfig
.github/workflows/: githubci.yml
components/arduino/: CMakeLists.old.txt  CMakeLists.txt
components/arduino/cores/esp32/: IPAddress.h
components/arduino/libraries/SPIS/src/: SPIS.cpp
components/arduino/libraries/WiFi/src/: WiFi.cpp  WiFi.h  WiFiClient.cpp  WiFiUdp.cpp
data/: roots.pem
main/: CMakeLists.txt  CommandHandler.cpp  sketch.ino.cpp
